--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
   font-family: "Helvetica Neue", sans-serif;
   padding: 20px;
-  background-color: #fafafafa;
+  background-color: #fafafa;
   max-width: 100vw;
   overflow-x: hidden;
 }
